Rotating view around last stroke point doesn't work with Armature #45776

Closed
opened 2015-08-12 22:50:13 +02:00 by Julio Iglesias · 9 comments

System Information
Operating system and graphics card
W10, GF630M

Blender Version
Broken: 2.75

Short description of error
In Texture Paint mode, rotating view around last stroke point doesn't work if the object has an armature modifier assigned.

Exact steps for others to reproduce the error
Open a rigged/armatured object, enter Texture Paint mode, paint any part of the model, the rotating point won't change.

**System Information** Operating system and graphics card W10, GF630M **Blender Version** Broken: 2.75 **Short description of error** In Texture Paint mode, rotating view around last stroke point doesn't work if the object has an armature modifier assigned. **Exact steps for others to reproduce the error** Open a rigged/armatured object, enter Texture Paint mode, paint any part of the model, the rotating point won't change.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Zafio

Added subscriber: @Zafio

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a simple .blend file to help reproducing the issue.

Please always attach a simple .blend file to help reproducing the issue.
Author

I'm not allowed to edit the task (even though I'm the author?) so here is is attached.
As you open it, paint on either planes and rotate the view to check rotation point doesn't change.

TP_RotView.blend

I'm not allowed to edit the task (even though I'm the author?) so here is is attached. As you open it, paint on either planes and rotate the view to check rotation point doesn't change. [TP_RotView.blend](https://archive.blender.org/developer/F223945/TP_RotView.blend)

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

OK, thanks… Actually, looks like I cannot make it working even without any armature here - but not sure about that feature, @Psy-Fi shall know better.

OK, thanks… Actually, looks like I cannot make it working even without any armature here - but not sure about that feature, @Psy-Fi shall know better.
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-08-13 14:40:52 +02:00

This issue was referenced by f4b65577ff

This issue was referenced by f4b65577ffe96713e1c4893113e6aa03632778e3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45776
No description provided.