Fix T45776: Rotate around selected fails in texture-paint mode w/ armature

Only rotate around the active pose bone when in weight-paint mode too.